CF-VPC-SecurityGroupIngress.yml
Description: Add inbound rule to allow 3306 from 10.125.0.0/16 and 10.79.0.0/16 to an existing security group

Resources:
  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Add inbound rule to allow 3306 from 10.125.0.0/16
       and 10.79.0.0/16 to an existing security group
      VpcId: vpc-0047e35949c9917a4  # Replace with your VPC ID
      SecurityGroupIngress:
        - CidrIp: 10.125.0.0/16
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
        - CidrIp: 10.79.0.0/16
          IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
